# kon-board

./: .gitignore  .travis.yml  ChangeLog.md  Dockerfile  Makefile  README.md  build.sh  cabal.project  cabal.project.freeze  docker-compose.yml  lts-12.26-cabal.config  stack.yaml
.github/workflows/: haskell.yml
kon-board/: ChangeLog.md  README.md  kon-board.cabal
kon-board-gen-elm/: README.md  kon-board-gen-elm.cabal
kon-board-gen-elm/app/: Main.hs
kon-board-gen-elm/src/KonBoard/Exec/: GenElm.hs
kon-board-server/: README.md  kon-board-server.cabal
kon-board-server/app/: InitDb.hs  Main.hs
kon-board-server/src/KonBoard/Exec/: Server.hs
kon-board-server/src/KonBoard/Web/: App.hs
kon-board/app/: ElmGenerate.hs  WebServer.hs
kon-board/src/: KonBoard.hs
kon-board/src/KonBoard/: Base.hs  Db.hs  MealPlan.hs  Query.hs  Recipe.hs
kon-board/src/KonBoard/Bridge/: MealPlan.hs  Recipe.hs  Time.hs  Util.hs
kon-board/src/KonBoard/Db/: Orphans.hs
kon-board/src/KonBoard/Elm/: Generate.hs
kon-board/src/KonBoard/Exec/: ElmGenerate.hs
kon-board/src/KonBoard/MealPlan/: Memory.hs  Store.hs  Yaml.hs
kon-board/src/KonBoard/Recipe/: Memory.hs  SQLite.hs  Store.hs  Yaml.hs
kon-board/src/KonBoard/Recipe/Internal/: Type.hs  Yaml.hs
kon-board/src/KonBoard/Util/: Aeson.hs  YAML.hs  Yaml.hs
kon-board/src/KonBoard/Web/: API.hs  Api.hs  App.hs
kon-board/test/: KonBoardSpec.hs
kon-board/test/KonBoard/: DbSpec.hs  MealPlanSpec.hs  QuerySpec.hs  RecipeSpec.hs  TestLogger.hs
kon-board/test/KonBoard/Bridge/: TimeSpec.hs
kon-board/test/KonBoard/MealPlan/: MemorySpec.hs  StoreSpec.hs  TestStore.hs  YamlSpec.hs
kon-board/test/KonBoard/Recipe/: MemorySpec.hs  StoreSpec.hs  TestStore.hs  YamlSpec.hs
kon-board/test/KonBoard/Util/: YAMLSpec.hs  YamlSpec.hs
kon-board/test/meal-plan/: plan1.yaml  plan2.yaml  plan3.yaml  plan_example.yaml  plan_multi.yaml
kon-board/test/meal-plans/: plan_example.yaml  plan_notes.yaml  plan_phases.yaml
kon-board/test/recipe/: recipe_ext.yaml  recipe_ext_url.yaml  recipe_in.yaml  recipe_in_url.yaml  recipe_multi.yaml  recipe_url.yaml
kon-board/test/recipes/: recipe_example.yaml  recipe_in.yaml  recipe_query_test.yaml
kon-elm/: elm.json
kon-elm/src/: .gitignore  CalEntry.elm  CalSpy.elm  Calendar.elm  Coming.elm  DateUtil.elm  HttpUtil.elm  ListUtil.elm  Locale.elm  MFuture.elm  Main.elm  MealPhase.elm  MealPlanLoader.elm  Page.elm  Ports.elm  Recipe.elm  UpdateM.elm
kon-elm/tests/: CalEntrySpec.elm  CalSpySpec.elm  CalendarSpec.elm  DateUtilSpec.elm  ListUtilSpec.elm  MealPhaseSpec.elm  PageSpec.elm
static/: .gitignore  index.html  index.html.template  style.css
static/icons/d/: LICENSE.md  README.md
static/icons/feather/: README.md
static/icons/foods/: README.md
static/icons/twbs/: README.md
