name:                   kon-board-server
version:                0.6.1.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               kon-board backend server executable
description:            kon-board backend server executable.
category:               Web
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md
homepage:               https://github.com/debug-ito/kon-board
bug-reports:            https://github.com/debug-ito/kon-board/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings, NumericUnderscores,
                        StrictData,
                        DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, DeriveGeneric, GeneralisedNewtypeDeriving
                        FlexibleContexts, FlexibleInstances,
                        RankNTypes, TypeApplications, TypeOperators, DataKinds, DuplicateRecordFields
  -- other-extensions:     
  exposed-modules:      KonBoard.Exec.Server,
                        KonBoard.Web.App
  -- other-modules:        
  build-depends:        base >=4.13.0.0 && <4.14,
                        kon-board ==0.6.1.0,
                        monad-logger,
                        mtl,
                        wai-extra,
                        servant-server,
                        text,
                        Glob,
                        warp,
                        safe-exceptions

flag static
  description: Static link
  default: False

executable kon-board-server
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports -rtsopts -threaded
  if flag(static)
    ld-options:         -static
  -- other-modules:        
  default-extensions:   OverloadedStrings, StrictData
  -- other-extensions:     
  build-depends:        base, kon-board-server

-- test-suite spec
--   type:                 exitcode-stdio-1.0
--   default-language:     Haskell2010
--   hs-source-dirs:       test
--   ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
--   main-is:              Spec.hs
--   default-extensions:   OverloadedStrings, StrictData
--   -- other-extensions:     
--   other-modules:        KonBoard.Exec.ServerSpec
--   build-depends:        base, kon-board-server,
--                         hspec
-- 
-- test-suite doctest
--   type:                 exitcode-stdio-1.0
--   default-language:     Haskell2010
--   hs-source-dirs:       test
--   ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
--   main-is:              DocTest.hs
--   default-extensions:   OverloadedStrings, StrictData
--   build-depends:        base,
--                         doctest >=0.13,
--                         doctest-discover >=0.1.0.7

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/kon-board.git
