name:                   kon-board-server
version:                0.7.2.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               kon-board backend server executable
description:            kon-board backend server executable.
category:               Web
cabal-version:          2.0
build-type:             Simple
extra-source-files:     README.md
homepage:               https://github.com/debug-ito/kon-board
bug-reports:            https://github.com/debug-ito/kon-board/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings, NumericUnderscores,
                        StrictData,
                        DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, DeriveGeneric, GeneralisedNewtypeDeriving
                        FlexibleContexts, FlexibleInstances,
                        RankNTypes, TypeApplications, TypeOperators, DataKinds, DuplicateRecordFields
  -- other-extensions:     
  exposed-modules:      KonBoard.Exec.Server,
                        KonBoard.Web.App
  -- other-modules:        
  build-depends:        base ^>=4.13.0.0,
                        kon-board ^>=0.7.2.0,
                        monad-logger ^>=0.3.39,
                        mtl ^>=2.2.2,
                        wai-extra ^>=3.1.13.0,
                        servant-server ^>=0.19.2,
                        text ^>=1.2.4.0,
                        Glob ^>=0.10.2,
                        warp ^>=3.3.24,
                        safe-exceptions ^>=0.1.7.3,
                        directory ^>=1.3.6.0,
                        resource-pool ^>=0.4.0.0

flag static
  description: Static link
  default: False

executable kon-board-server
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports -rtsopts -threaded
  if flag(static)
    ld-options:         -static
  -- other-modules:        
  default-extensions:   OverloadedStrings, StrictData
  -- other-extensions:     
  build-depends:        base ^>=4.13.0.0,
                        kon-board-server

executable kon-board-init-db
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              InitDb.hs
  ghc-options:          -Wall -fno-warn-unused-imports -rtsopts -threaded
  if flag(static)
    ld-options:         -static
  -- other-modules:        
  default-extensions:   OverloadedStrings, StrictData
  -- other-extensions:     
  build-depends:        base ^>=4.13.0.0,
                        kon-board-server


-- test-suite spec
--   type:                 exitcode-stdio-1.0
--   default-language:     Haskell2010
--   hs-source-dirs:       test
--   ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
--   main-is:              Spec.hs
--   default-extensions:   OverloadedStrings, StrictData
--   -- other-extensions:     
--   other-modules:        KonBoard.Exec.ServerSpec
--   build-depends:        base, kon-board-server,
--                         hspec
-- 
-- test-suite doctest
--   type:                 exitcode-stdio-1.0
--   default-language:     Haskell2010
--   hs-source-dirs:       test
--   ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
--   main-is:              DocTest.hs
--   default-extensions:   OverloadedStrings, StrictData
--   build-depends:        base,
--                         doctest >=0.13,
--                         doctest-discover >=0.1.0.7

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/kon-board.git
