name:                   kon-board
version:                0.7.2.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               kon-board core library
description:            kon-board is a simple Web-based meal calendar.
                        This package is the core library of kon-board.
category:               Web
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md,
                        test/recipes/*.yaml,
                        test/meal-plans/*.yaml
homepage:               https://github.com/debug-ito/kon-board
bug-reports:            https://github.com/debug-ito/kon-board/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings, NumericUnderscores,
                        StrictData,
                        DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, DeriveGeneric, GeneralizedNewtypeDeriving,
                        FlexibleContexts, FlexibleInstances,
                        RankNTypes, TypeApplications, TypeOperators, DataKinds, DuplicateRecordFields,
                        TypeFamilies, MultiParamTypeClasses, StandaloneDeriving
  other-extensions:     TemplateHaskell, GADTs, QuasiQuotes
  exposed-modules:      KonBoard.Recipe,
                        KonBoard.Recipe.Memory,
                        KonBoard.Recipe.Yaml
                        KonBoard.Recipe.Internal.Type,
                        KonBoard.MealPlan,
                        KonBoard.MealPlan.Memory,
                        KonBoard.MealPlan.Yaml,
                        KonBoard.Bridge.MealPlan,
                        KonBoard.Bridge.Recipe,
                        KonBoard.Bridge.Time,
                        KonBoard.Util.Yaml,
                        KonBoard.Util.Aeson,
                        KonBoard.Web.Api,
                        KonBoard.Db
  other-modules:        KonBoard.Base,
                        KonBoard.Db.Orphans
  build-depends:        base >=4.13.0.0 && <4.14,
                        text,
                        aeson >=2.0 && <2.1,
                        unordered-containers,
                        containers,
                        bytestring,
                        mtl,
                        time,
                        cryptohash-md5,
                        base16-bytestring,
                        safe-exceptions,
                        elm-bridge,
                        servant,
                        semigroups,
                        monad-logger,
                        HsYAML,
                        HsYAML-aeson,
                        beam-core,
                        beam-sqlite,
                        sqlite-simple,
                        string-interpolate

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  default-extensions:   OverloadedStrings, NumericUnderscores,
                        StrictData,
                        DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, DeriveGeneric, GeneralisedNewtypeDeriving
                        FlexibleContexts, FlexibleInstances,
                        RankNTypes, TypeApplications, TypeOperators, DataKinds, DuplicateRecordFields,
                        QuasiQuotes
  other-extensions:     TemplateHaskell, GADTs
  other-modules:        KonBoard.RecipeSpec,
                        KonBoard.Recipe.MemorySpec,
                        KonBoard.Recipe.YamlSpec,
                        KonBoard.Recipe.TestStore,
                        KonBoard.MealPlanSpec,
                        KonBoard.MealPlan.YamlSpec,
                        KonBoard.MealPlan.MemorySpec,
                        KonBoard.MealPlan.TestStore,
                        KonBoard.Util.YamlSpec,
                        KonBoard.Bridge.TimeSpec,
                        KonBoard.TestLogger,
                        KonBoard.DbSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base, kon-board, bytestring, text, time, monad-logger, mtl, servant, string-interpolate, safe-exceptions,
                        hspec,
                        directory
                        

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/kon-board.git
