name:                   kon-board
version:                0.7.2.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               kon-board core library
description:            kon-board is a simple Web-based meal calendar.
                        This package is the core library of kon-board.
category:               Web
cabal-version:          2.0
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md,
                        test/recipes/*.yaml,
                        test/meal-plans/*.yaml
homepage:               https://github.com/debug-ito/kon-board
bug-reports:            https://github.com/debug-ito/kon-board/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings, NumericUnderscores,
                        StrictData,
                        DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, DeriveGeneric, GeneralizedNewtypeDeriving,
                        FlexibleContexts, FlexibleInstances,
                        RankNTypes, TypeApplications, TypeOperators, DataKinds, DuplicateRecordFields,
                        TypeFamilies, MultiParamTypeClasses, StandaloneDeriving
  other-extensions:     TemplateHaskell, GADTs, QuasiQuotes, ScopedTypeVariables
  exposed-modules:      KonBoard.Recipe,
                        KonBoard.Recipe.Memory,
                        KonBoard.Recipe.Yaml
                        KonBoard.Recipe.Internal.Type,
                        KonBoard.MealPlan,
                        KonBoard.MealPlan.Memory,
                        KonBoard.MealPlan.Yaml,
                        KonBoard.Bridge.MealPlan,
                        KonBoard.Bridge.Recipe,
                        KonBoard.Bridge.Time,
                        KonBoard.Util.Yaml,
                        KonBoard.Util.Aeson,
                        KonBoard.Web.Api,
                        KonBoard.Db,
                        KonBoard.Query
  other-modules:        KonBoard.Base,
                        KonBoard.Db.Orphans
  build-depends:        base ^>=4.13.0.0,
                        text ^>=1.2.4.0,
                        aeson ^>=2.0.3.0,
                        unordered-containers ^>=0.2.19.1,
                        containers ^>=0.6.2.1,
                        bytestring ^>=0.10.10.1,
                        mtl ^>=2.2.2,
                        time ^>=1.9.3,
                        cryptohash-md5 ^>=0.11.101.0,
                        base16-bytestring ^>=1.0.2.0,
                        safe-exceptions ^>=0.1.7.3,
                        elm-bridge ^>=0.6.1,
                        servant ^>=0.19.1,
                        semigroups ^>=0.20,
                        monad-logger ^>=0.3.39,
                        HsYAML ^>=0.2.1.1,
                        HsYAML-aeson ^>=0.2.0.1,
                        beam-core ^>=0.10.0.0,
                        beam-sqlite ^>=0.5.2.0,
                        sqlite-simple ^>=0.4.18.2,
                        string-interpolate ^>=0.3.2.0

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -threaded
  main-is:              Spec.hs
  default-extensions:   OverloadedStrings, NumericUnderscores,
                        StrictData,
                        DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, DeriveGeneric, GeneralisedNewtypeDeriving
                        FlexibleContexts, FlexibleInstances,
                        RankNTypes, TypeApplications, TypeOperators, DataKinds, DuplicateRecordFields,
                        QuasiQuotes
  other-extensions:     TemplateHaskell, GADTs
  other-modules:        KonBoard.RecipeSpec,
                        KonBoard.Recipe.MemorySpec,
                        KonBoard.Recipe.YamlSpec,
                        KonBoard.Recipe.TestStore,
                        KonBoard.MealPlanSpec,
                        KonBoard.MealPlan.YamlSpec,
                        KonBoard.MealPlan.MemorySpec,
                        KonBoard.MealPlan.TestStore,
                        KonBoard.Util.YamlSpec,
                        KonBoard.Bridge.TimeSpec,
                        KonBoard.TestLogger,
                        KonBoard.DbSpec,
                        KonBoard.QuerySpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base ^>=4.13.0.0,
                        kon-board,
                        bytestring ^>=0.10.10.1,
                        text ^>=1.2.4.0,
                        time ^>=1.9.3,
                        monad-logger ^>=0.3.39,
                        mtl ^>=2.2.2,
                        servant ^>=0.19.1,
                        string-interpolate ^>=0.3.2.0,
                        safe-exceptions ^>=0.1.7.3,
                        hspec ^>=2.10.10,
                        directory ^>=1.3.6.0,
                        async ^>=2.2.4,
                        resource-pool ^>=0.4.0.0
                        

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/kon-board.git
